--- a/2505_DataLogger_FW/IDLog/IDLog.ioc
+++ b/2505_DataLogger_FW/IDLog/IDLog.ioc
@@ -18,33 +18,61 @@ GPIO.groupedBy=Group By Peripherals
 I2C3.IPParameters=Timing
 I2C3.Timing=0x00303D5B
 KeepUserPlacement=false
+LCD.Contrast=LCD_CONTRASTLEVEL_7
+LCD.Divider=LCD_DIVIDER_31
+LCD.IPParameters=Prescaler,Divider,Contrast,PulseOnDuration
+LCD.Prescaler=LCD_PRESCALER_2
+LCD.PulseOnDuration=LCD_PULSEONDURATION_5
 Mcu.CPN=STM32U083RCT6
 Mcu.Family=STM32U0
 Mcu.IP0=ADC1
 Mcu.IP1=CORTEX_M0+
+Mcu.IP10=TIM16
 Mcu.IP2=I2C3
-Mcu.IP3=NVIC
-Mcu.IP4=PWR
-Mcu.IP5=RCC
-Mcu.IP6=SPI3
-Mcu.IP7=SYS
-Mcu.IP8=TIM16
-Mcu.IPNb=9
+Mcu.IP3=LCD
+Mcu.IP4=NVIC
+Mcu.IP5=PWR
+Mcu.IP6=RCC
+Mcu.IP7=RTC
+Mcu.IP8=SPI3
+Mcu.IP9=SYS
+Mcu.IPNb=11
 Mcu.Name=STM32U083RCTx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC0
 Mcu.Pin1=PC1
-Mcu.Pin10=VP_SYS_VS_Systick
-Mcu.Pin11=VP_TIM16_VS_ClockSourceINT
-Mcu.Pin2=PC7
-Mcu.Pin3=PC8
-Mcu.Pin4=PA15
-Mcu.Pin5=PC10
-Mcu.Pin6=PC11
-Mcu.Pin7=PC12
-Mcu.Pin8=VP_ADC1_Vbat_Input
-Mcu.Pin9=VP_PWR_VS_SECSignals
-Mcu.PinsNb=12
+Mcu.Pin10=PB10
+Mcu.Pin11=PB11
+Mcu.Pin12=PB12
+Mcu.Pin13=PB13
+Mcu.Pin14=PC7
+Mcu.Pin15=PC8
+Mcu.Pin16=PA8
+Mcu.Pin17=PA9
+Mcu.Pin18=PA10
+Mcu.Pin19=PA15
+Mcu.Pin2=PC3
+Mcu.Pin20=PC10
+Mcu.Pin21=PC11
+Mcu.Pin22=PC12
+Mcu.Pin23=PB3
+Mcu.Pin24=PB4
+Mcu.Pin25=PB5
+Mcu.Pin26=PB9
+Mcu.Pin27=VP_ADC1_Vbat_Input
+Mcu.Pin28=VP_PWR_VS_SECSignals
+Mcu.Pin29=VP_RTC_VS_RTC_Activate
+Mcu.Pin3=PA1
+Mcu.Pin30=VP_RTC_VS_RTC_Calendar
+Mcu.Pin31=VP_SYS_VS_Systick
+Mcu.Pin32=VP_TIM16_VS_ClockSourceINT
+Mcu.Pin4=PA2
+Mcu.Pin5=PA3
+Mcu.Pin6=PA6
+Mcu.Pin7=PA7
+Mcu.Pin8=PB0
+Mcu.Pin9=PB1
+Mcu.PinsNb=33
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32U083RCTx
@@ -58,10 +86,46 @@ NVIC.PriorityGroup=NVIC_PRIORITYGROUP_2
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:3\:0\:false\:false\:true\:false\:true\:false
 NVIC.TIM16_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+PA1.Mode=SEG0
+PA1.Signal=LCD_SEG0
+PA10.Mode=1/4 Duty Cycle
+PA10.Signal=LCD_COM2
 PA15.GPIOParameters=GPIO_Label
 PA15.GPIO_Label=EEPROM_CS
 PA15.Locked=true
 PA15.Signal=GPIO_Output
+PA2.Mode=SEG1
+PA2.Signal=LCD_SEG1
+PA3.Mode=SEG2
+PA3.Signal=LCD_SEG2
+PA6.Mode=SEG3
+PA6.Signal=LCD_SEG3
+PA7.Mode=SEG4
+PA7.Signal=LCD_SEG4
+PA8.Mode=1/4 Duty Cycle
+PA8.Signal=LCD_COM0
+PA9.Mode=1/4 Duty Cycle
+PA9.Signal=LCD_COM1
+PB0.Mode=SEG5
+PB0.Signal=LCD_SEG5
+PB1.Mode=SEG6
+PB1.Signal=LCD_SEG6
+PB10.Mode=SEG10
+PB10.Signal=LCD_SEG10
+PB11.Mode=SEG11
+PB11.Signal=LCD_SEG11
+PB12.Mode=SEG12
+PB12.Signal=LCD_SEG12
+PB13.Mode=SEG13
+PB13.Signal=LCD_SEG13
+PB3.Mode=SEG7
+PB3.Signal=LCD_SEG7
+PB4.Mode=SEG8
+PB4.Signal=LCD_SEG8
+PB5.Mode=SEG9
+PB5.Signal=LCD_SEG9
+PB9.Mode=1/4 Duty Cycle
+PB9.Signal=LCD_COM3
 PC0.Mode=I2C
 PC0.Signal=I2C3_SCL
 PC1.Mode=I2C
@@ -72,6 +136,8 @@ PC11.Mode=Full_Duplex_Master
 PC11.Signal=SPI3_MISO
 PC12.Mode=Full_Duplex_Master
 PC12.Signal=SPI3_MOSI
+PC3.Mode=1/4 Duty Cycle
+PC3.Signal=LCD_VLCD
 PC7.GPIOParameters=GPIO_Label
 PC7.GPIO_Label=HB_LED
 PC7.Locked=true
@@ -112,7 +178,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_I2C3_Init-I2C3-false-HAL-true,4-MX_SPI3_Init-SPI3-false-HAL-true,5-MX_ADC1_Init-ADC1-false-HAL-true,6-MX_TIM16_Init-TIM16-false-HAL-true,0-MX_CORTEX_M0+_Init-CORTEX_M0+-false-HAL-true,0-MX_PWR_Init-PWR-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_I2C3_Init-I2C3-false-HAL-true,4-MX_SPI3_Init-SPI3-false-HAL-true,5-MX_ADC1_Init-ADC1-false-HAL-true,6-MX_TIM16_Init-TIM16-false-HAL-true,7-MX_LCD_Init-LCD-false-HAL-true,0-MX_CORTEX_M0+_Init-CORTEX_M0+-false-HAL-true,0-MX_PWR_Init-PWR-false-HAL-true
 RCC.AHBFreq_Value=16000000
 RCC.APBFreq_Value=16000000
 RCC.APBTimFreq_Value=16000000
@@ -149,6 +215,8 @@ RCC.USART1Freq_Value=16000000
 RCC.USART2Freq_Value=16000000
 RCC.VCOInputFreq_Value=16000000
 RCC.VCOOutputFreq_Value=64000000
+RTC.IPParameters=Year
+RTC.Year=25
 SPI3.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_8
 SPI3.CalculateBaudRate=2.0 MBits/s
 SPI3.DataSize=SPI_DATASIZE_8BIT
@@ -164,6 +232,10 @@ VP_ADC1_Vbat_Input.Mode=IN-Vbat
 VP_ADC1_Vbat_Input.Signal=ADC1_Vbat_Input
 VP_PWR_VS_SECSignals.Mode=Security/Privilege
 VP_PWR_VS_SECSignals.Signal=PWR_VS_SECSignals
+VP_RTC_VS_RTC_Activate.Mode=RTC_Enabled
+VP_RTC_VS_RTC_Activate.Signal=RTC_VS_RTC_Activate
+VP_RTC_VS_RTC_Calendar.Mode=RTC_Calendar
+VP_RTC_VS_RTC_Calendar.Signal=RTC_VS_RTC_Calendar
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 VP_TIM16_VS_ClockSourceINT.Mode=Enable_Timer
